# planetarium

./: .README.md.swp  .README.md.un~  .gitignore  CMakeLists.txt  Console.cpp  Console.h  Doxyfile  FileFormat.h  Font.h  MainWindow.cpp  MainWindow.h  Options.h  PlanetHandle.h  PlanetStat.h  PlanetsController.cpp  PlanetsController.h  PlanetsThread.h  PositionTransformer.h  README.md  README.md~  RenderHandle.h  Timer.h  Vector.h  conanfile.txt  dump.h  gitignore.txt  init.cpp  init.h  main.cpp  movement.cpp  movement.h  orbit_queue.cpp  orbit_queue.h  planet.cpp  planet.h  ship.cpp  ship.h  vector2f.h
core/: CMakeLists.txt  Console.cpp  FileFormat.h  MainWindow.cpp  MainWindow.h  PlanetsController.cpp  PlanetsController.h  PlanetsThread.h  PluginManager.h  PositionTransformer.cpp  PositionTransformer.h  Vector.h
data/: ground.oldsystem  mars.oldsystem  movement.oldsystem  pair.oldsystem  ship.oldsystem  solar.oldsystem
plugins/: CMakeLists.txt
plugins/Offplugin/: CMakeLists.txt
src/: CMakeLists.txt  Console.h  FileFormat.h  Font.h  Number.h  Options.h  Planet.cpp  PlanetsController.cpp  PlanetsController.h  PluginManager.cpp  Settings.h  main.cpp  planet.h
src/plugins/: CMakeLists.txt
src/plugins/Offplugin/: CMakeLists.txt  FileFormat.cpp  FileFormat.h
underworked/: PlanetHandle.h  PlanetStat.h  RenderHandle.h  console.cpp  console.h  dump.cpp  dump.h  init.cpp  init.h  movement.cpp  movement.h  orbit_queue.cpp  orbit_queue.h  planet.cpp  planet.h  settings.h  ship.cpp  ship.h  ship_utils.cpp  ship_utils.h  time_counter.cpp  time_counter.h  vector2f.h
